assignment2/parser.output
Grammar

    0 $accept: program $end

    1 program: scope

    2 scope: '{' declaration_list statement_list '}'
    3      | '{' statement_list '}'

    4 declaration_list: declaration_list declaration
    5                 | declaration

    6 declaration: type IDENT
    7            | type IDENT '[' INTCONST ']'
    8            | type IDENT ':' scope
    9            | type IDENT '(' parameters ')' ':' scope
   10            | PROC IDENT ':' scope
   11            | PROC IDENT '(' parameters ')' ':' scope

   12 statement_list: statement_list statement
   13               | statement

   14 statement: variable '=' expression
   15          | IF expression THEN statement_list FI
   16          | IF expression THEN statement_list ELSE statement_list FI
   17          | WHILE expression DO statement_list OD
   18          | DO statement_list UNTIL expression
   19          | EXIT
   20          | RETURN
   21          | RESULT expression
   22          | PUT output_list
   23          | GET input
   24          | IDENT
   25          | IDENT '(' arguments ')'
   26          | scope

   27 output_list: output_list ',' output
   28            | output

   29 output: expression
   30       | TEXTCONST
   31       | SKIP

   32 input: input ',' variable
   33      | variable

   34 type: INT
   35     | BOOL

   36 variable: IDENT
   37         | IDENT '[' expression ']'

   38 arguments: arguments ',' expression
   39          | expression

   40 parameters: parameters ',' type IDENT
   41           | type IDENT

   42 expression: INTCONST
   43           | '-' expression
   44           | expression '+' expression
   45           | expression '-' expression
   46           | expression '*' expression
   47           | expression '/' expression
   48           | TTRUE
   49           | TFALSE
   50           | '!' expression
   51           | expression '&' expression
   52           | expression '|' expression
   53           | expression '=' expression
   54           | expression '#' expression
   55           | expression '<' expression
   56           | expression '<' '=' expression
   57           | expression '>' expression
   58           | expression '>' '=' expression
   59           | '(' expression ')'
   60           | '(' expression '?' expression ':' expression ')'
   61           | variable
   62           | IDENT '(' arguments ')'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 50
'#' (35) 54
'&' (38) 51
'(' (40) 9 11 25 59 60 62
')' (41) 9 11 25 59 60 62
'*' (42) 46
'+' (43) 44
',' (44) 27 32 38 40
'-' (45) 43 45
'/' (47) 47
':' (58) 8 9 10 11 60
'<' (60) 55 56
'=' (61) 14 53 56 58
'>' (62) 57 58
'?' (63) 60
'[' (91) 7 37
']' (93) 7 37
'{' (123) 2 3
'|' (124) 52
'}' (125) 2 3
error (256)
IDENT (258) 6 7 8 9 10 11 24 25 36 37 40 41 62
INTCONST (259) 7 42
TEXTCONST (260) 30
BOOL (261) 35
DO (262) 17 18
ELSE (263) 16
EXIT (264) 19
FI (265) 15 16
GET (266) 23
IF (267) 15 16
INT (268) 34
OD (269) 17
PROC (270) 10 11
PUT (271) 22
SKIP (272) 31
RESULT (273) 21
RETURN (274) 20
THEN (275) 15 16
TFALSE (276) 49
TTRUE (277) 48
UNTIL (278) 18
WHILE (279) 17
GTE (280)
LTE (281)
UMINUS (282)


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
program (49)
    on left: 1, on right: 0
scope (50)
    on left: 2 3, on right: 1 8 9 10 11 26
declaration_list (51)
    on left: 4 5, on right: 2 4
declaration (52)
    on left: 6 7 8 9 10 11, on right: 4 5
statement_list (53)
    on left: 12 13, on right: 2 3 12 15 16 17 18
statement (54)
    on left: 14 15 16 17 18 19 20 21 22 23 24 25 26, on right: 12 13
output_list (55)
    on left: 27 28, on right: 22 27
output (56)
    on left: 29 30 31, on right: 27 28
input (57)
    on left: 32 33, on right: 23 32
type (58)
    on left: 34 35, on right: 6 7 8 9 40 41
variable (59)
    on left: 36 37, on right: 14 32 33 61
arguments (60)
    on left: 38 39, on right: 25 38 62
parameters (61)
    on left: 40 41, on right: 9 11 40
expression (62)
    on left: 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59
    60 61 62, on right: 14 15 16 17 18 21 29 37 38 39 43 44 45 46 47
    50 51 52 53 54 55 56 57 58 59 60


State 0

    0 $accept: . program $end

    '{'  shift, and go to state 1

    program  go to state 2
    scope    go to state 3


State 1

    2 scope: '{' . declaration_list statement_list '}'
    3      | '{' . statement_list '}'

    IDENT   shift, and go to state 4
    BOOL    shift, and go to state 5
    DO      shift, and go to state 6
    EXIT    shift, and go to state 7
    GET     shift, and go to state 8
    IF      shift, and go to state 9
    INT     shift, and go to state 10
    PROC    shift, and go to state 11
    PUT     shift, and go to state 12
    RESULT  shift, and go to state 13
    RETURN  shift, and go to state 14
    WHILE   shift, and go to state 15
    '{'     shift, and go to state 1

    scope             go to state 16
    declaration_list  go to state 17
    declaration       go to state 18
    statement_list    go to state 19
    statement         go to state 20
    type              go to state 21
    variable          go to state 22


State 2

    0 $accept: program . $end

    $end  shift, and go to state 23


State 3

    1 program: scope .

    $default  reduce using rule 1 (program)


State 4

   24 statement: IDENT .
   25          | IDENT . '(' arguments ')'
   36 variable: IDENT .
   37         | IDENT . '[' expression ']'

    '['  shift, and go to state 24
    '('  shift, and go to state 25

    '='       reduce using rule 36 (variable)
    $default  reduce using rule 24 (statement)


State 5

   35 type: BOOL .

    $default  reduce using rule 35 (type)


State 6

   18 statement: DO . statement_list UNTIL expression

    IDENT   shift, and go to state 4
    DO      shift, and go to state 6
    EXIT    shift, and go to state 7
    GET     shift, and go to state 8
    IF      shift, and go to state 9
    PUT     shift, and go to state 12
    RESULT  shift, and go to state 13
    RETURN  shift, and go to state 14
    WHILE   shift, and go to state 15
    '{'     shift, and go to state 1

    scope           go to state 16
    statement_list  go to state 26
    statement       go to state 20
    variable        go to state 22


State 7

   19 statement: EXIT .

    $default  reduce using rule 19 (statement)


State 8

   23 statement: GET . input

    IDENT  shift, and go to state 27

    input     go to state 28
    variable  go to state 29


State 9

   15 statement: IF . expression THEN statement_list FI
   16          | IF . expression THEN statement_list ELSE statement_list FI

    IDENT     shift, and go to state 30
    INTCONST  shift, and go to state 31
    TFALSE    shift, and go to state 32
    TTRUE     shift, and go to state 33
    '!'       shift, and go to state 34
    '-'       shift, and go to state 35
    '('       shift, and go to state 36

    variable    go to state 37
    expression  go to state 38


State 10

   34 type: INT .

    $default  reduce using rule 34 (type)


State 11

   10 declaration: PROC . IDENT ':' scope
   11            | PROC . IDENT '(' parameters ')' ':' scope

    IDENT  shift, and go to state 39


State 12

   22 statement: PUT . output_list

    IDENT      shift, and go to state 30
    INTCONST   shift, and go to state 31
    TEXTCONST  shift, and go to state 40
    SKIP       shift, and go to state 41
    TFALSE     shift, and go to state 32
    TTRUE      shift, and go to state 33
    '!'        shift, and go to state 34
    '-'        shift, and go to state 35
    '('        shift, and go to state 36

    output_list  go to state 42
    output       go to state 43
    variable     go to state 37
    expression   go to state 44


State 13

   21 statement: RESULT . expression

    IDENT     shift, and go to state 30
    INTCONST  shift, and go to state 31
    TFALSE    shift, and go to state 32
    TTRUE     shift, and go to state 33
    '!'       shift, and go to state 34
    '-'       shift, and go to state 35
    '('       shift, and go to state 36

    variable    go to state 37
    expression  go to state 45


State 14

   20 statement: RETURN .

    $default  reduce using rule 20 (statement)


State 15

   17 statement: WHILE . expression DO statement_list OD

    IDENT     shift, and go to state 30
    INTCONST  shift, and go to state 31
    TFALSE    shift, and go to state 32
    TTRUE     shift, and go to state 33
    '!'       shift, and go to state 34
    '-'       shift, and go to state 35
    '('       shift, and go to state 36

    variable    go to state 37
    expression  go to state 46


State 16

   26 statement: scope .

    $default  reduce using rule 26 (statement)


State 17

    2 scope: '{' declaration_list . statement_list '}'
    4 declaration_list: declaration_list . declaration

    IDENT   shift, and go to state 4
    BOOL    shift, and go to state 5
    DO      shift, and go to state 6
    EXIT    shift, and go to state 7
    GET     shift, and go to state 8
    IF      shift, and go to state 9
    INT     shift, and go to state 10
    PROC    shift, and go to state 11
    PUT     shift, and go to state 12
    RESULT  shift, and go to state 13
    RETURN  shift, and go to state 14
    WHILE   shift, and go to state 15
    '{'     shift, and go to state 1

    scope           go to state 16
    declaration     go to state 47
    statement_list  go to state 48
    statement       go to state 20
    type            go to state 21
    variable        go to state 22


State 18

    5 declaration_list: declaration .

    $default  reduce using rule 5 (declaration_list)


State 19

    3 scope: '{' statement_list . '}'
   12 statement_list: statement_list . statement

    IDENT   shift, and go to state 4
    DO      shift, and go to state 6
    EXIT    shift, and go to state 7
    GET     shift, and go to state 8
    IF      shift, and go to state 9
    PUT     shift, and go to state 12
    RESULT  shift, and go to state 13
    RETURN  shift, and go to state 14
    WHILE   shift, and go to state 15
    '{'     shift, and go to state 1
    '}'     shift, and go to state 49

    scope      go to state 16
    statement  go to state 50
    variable   go to state 22


State 20

   13 statement_list: statement .

    $default  reduce using rule 13 (statement_list)


State 21

    6 declaration: type . IDENT
    7            | type . IDENT '[' INTCONST ']'
    8            | type . IDENT ':' scope
    9            | type . IDENT '(' parameters ')' ':' scope

    IDENT  shift, and go to state 51


State 22

   14 statement: variable . '=' expression

    '='  shift, and go to state 52


State 23

    0 $accept: program $end .

    $default  accept


State 24

   37 variable: IDENT '[' . expression ']'

    IDENT     shift, and go to state 30
    INTCONST  shift, and go to state 31
    TFALSE    shift, and go to state 32
    TTRUE     shift, and go to state 33
    '!'       shift, and go to state 34
    '-'       shift, and go to state 35
    '('       shift, and go to state 36

    variable    go to state 37
    expression  go to state 53


State 25

   25 statement: IDENT '(' . arguments ')'

    IDENT     shift, and go to state 30
    INTCONST  shift, and go to state 31
    TFALSE    shift, and go to state 32
    TTRUE     shift, and go to state 33
    '!'       shift, and go to state 34
    '-'       shift, and go to state 35
    '('       shift, and go to state 36

    variable    go to state 37
    arguments   go to state 54
    expression  go to state 55


State 26

   12 statement_list: statement_list . statement
   18 statement: DO statement_list . UNTIL expression

    IDENT   shift, and go to state 4
    DO      shift, and go to state 6
    EXIT    shift, and go to state 7
    GET     shift, and go to state 8
    IF      shift, and go to state 9
    PUT     shift, and go to state 12
    RESULT  shift, and go to state 13
    RETURN  shift, and go to state 14
    UNTIL   shift, and go to state 56
    WHILE   shift, and go to state 15
    '{'     shift, and go to state 1

    scope      go to state 16
    statement  go to state 50
    variable   go to state 22


State 27

   36 variable: IDENT .
   37         | IDENT . '[' expression ']'

    '['  shift, and go to state 24

    $default  reduce using rule 36 (variable)


State 28

   23 statement: GET input .
   32 input: input . ',' variable

    ','  shift, and go to state 57

    $default  reduce using rule 23 (statement)


State 29

   33 input: variable .

    $default  reduce using rule 33 (input)


State 30

   36 variable: IDENT .
   37         | IDENT . '[' expression ']'
   62 expression: IDENT . '(' arguments ')'

    '['  shift, and go to state 24
    '('  shift, and go to state 58

    $default  reduce using rule 36 (variable)


State 31

   42 expression: INTCONST .

    $default  reduce using rule 42 (expression)


State 32

   49 expression: TFALSE .

    $default  reduce using rule 49 (expression)


State 33

   48 expression: TTRUE .

    $default  reduce using rule 48 (expression)


State 34

   50 expression: '!' . expression

    IDENT     shift, and go to state 30
    INTCONST  shift, and go to state 31
    TFALSE    shift, and go to state 32
    TTRUE     shift, and go to state 33
    '!'       shift, and go to state 34
    '-'       shift, and go to state 35
    '('       shift, and go to state 36

    variable    go to state 37
    expression  go to state 59


State 35

   43 expression: '-' . expression

    IDENT     shift, and go to state 30
    INTCONST  shift, and go to state 31
    TFALSE    shift, and go to state 32
    TTRUE     shift, and go to state 33
    '!'       shift, and go to state 34
    '-'       shift, and go to state 35
    '('       shift, and go to state 36

    variable    go to state 37
    expression  go to state 60


State 36

   59 expression: '(' . expression ')'
   60           | '(' . expression '?' expression ':' expression ')'

    IDENT     shift, and go to state 30
    INTCONST  shift, and go to state 31
    TFALSE    shift, and go to state 32
    TTRUE     shift, and go to state 33
    '!'       shift, and go to state 34
    '-'       shift, and go to state 35
    '('       shift, and go to state 36

    variable    go to state 37
    expression  go to state 61


State 37

   61 expression: variable .

    $default  reduce using rule 61 (expression)


State 38

   15 statement: IF expression . THEN statement_list FI
   16          | IF expression . THEN statement_list ELSE statement_list FI
   44 expression: expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   51           | expression . '&' expression
   52           | expression . '|' expression
   53           | expression . '=' expression
   54           | expression . '#' expression
   55           | expression . '<' expression
   56           | expression . '<' '=' expression
   57           | expression . '>' expression
   58           | expression . '>' '=' expression

    THEN  shift, and go to state 62
    '|'   shift, and go to state 63
    '&'   shift, and go to state 64
    '='   shift, and go to state 65
    '#'   shift, and go to state 66
    '<'   shift, and go to state 67
    '>'   shift, and go to state 68
    '+'   shift, and go to state 69
    '-'   shift, and go to state 70
    '*'   shift, and go to state 71
    '/'   shift, and go to state 72


State 39

   10 declaration: PROC IDENT . ':' scope
   11            | PROC IDENT . '(' parameters ')' ':' scope

    ':'  shift, and go to state 73
    '('  shift, and go to state 74


State 40

   30 output: TEXTCONST .

    $default  reduce using rule 30 (output)


State 41

   31 output: SKIP .

    $default  reduce using rule 31 (output)


State 42

   22 statement: PUT output_list .
   27 output_list: output_list . ',' output

    ','  shift, and go to state 75

    $default  reduce using rule 22 (statement)


State 43

   28 output_list: output .

    $default  reduce using rule 28 (output_list)


State 44

   29 output: expression .
   44 expression: expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   51           | expression . '&' expression
   52           | expression . '|' expression
   53           | expression . '=' expression
   54           | expression . '#' expression
   55           | expression . '<' expression
   56           | expression . '<' '=' expression
   57           | expression . '>' expression
   58           | expression . '>' '=' expression

    '|'  shift, and go to state 63
    '&'  shift, and go to state 64
    '='  shift, and go to state 65
    '#'  shift, and go to state 66
    '<'  shift, and go to state 67
    '>'  shift, and go to state 68
    '+'  shift, and go to state 69
    '-'  shift, and go to state 70
    '*'  shift, and go to state 71
    '/'  shift, and go to state 72

    $default  reduce using rule 29 (output)


State 45

   21 statement: RESULT expression .
   44 expression: expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   51           | expression . '&' expression
   52           | expression . '|' expression
   53           | expression . '=' expression
   54           | expression . '#' expression
   55           | expression . '<' expression
   56           | expression . '<' '=' expression
   57           | expression . '>' expression
   58           | expression . '>' '=' expression

    '|'  shift, and go to state 63
    '&'  shift, and go to state 64
    '='  shift, and go to state 65
    '#'  shift, and go to state 66
    '<'  shift, and go to state 67
    '>'  shift, and go to state 68
    '+'  shift, and go to state 69
    '-'  shift, and go to state 70
    '*'  shift, and go to state 71
    '/'  shift, and go to state 72

    $default  reduce using rule 21 (statement)


State 46

   17 statement: WHILE expression . DO statement_list OD
   44 expression: expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   51           | expression . '&' expression
   52           | expression . '|' expression
   53           | expression . '=' expression
   54           | expression . '#' expression
   55           | expression . '<' expression
   56           | expression . '<' '=' expression
   57           | expression . '>' expression
   58           | expression . '>' '=' expression

    DO   shift, and go to state 76
    '|'  shift, and go to state 63
    '&'  shift, and go to state 64
    '='  shift, and go to state 65
    '#'  shift, and go to state 66
    '<'  shift, and go to state 67
    '>'  shift, and go to state 68
    '+'  shift, and go to state 69
    '-'  shift, and go to state 70
    '*'  shift, and go to state 71
    '/'  shift, and go to state 72


State 47

    4 declaration_list: declaration_list declaration .

    $default  reduce using rule 4 (declaration_list)


State 48

    2 scope: '{' declaration_list statement_list . '}'
   12 statement_list: statement_list . statement

    IDENT   shift, and go to state 4
    DO      shift, and go to state 6
    EXIT    shift, and go to state 7
    GET     shift, and go to state 8
    IF      shift, and go to state 9
    PUT     shift, and go to state 12
    RESULT  shift, and go to state 13
    RETURN  shift, and go to state 14
    WHILE   shift, and go to state 15
    '{'     shift, and go to state 1
    '}'     shift, and go to state 77

    scope      go to state 16
    statement  go to state 50
    variable   go to state 22


State 49

    3 scope: '{' statement_list '}' .

    $default  reduce using rule 3 (scope)


State 50

   12 statement_list: statement_list statement .

    $default  reduce using rule 12 (statement_list)


State 51

    6 declaration: type IDENT .
    7            | type IDENT . '[' INTCONST ']'
    8            | type IDENT . ':' scope
    9            | type IDENT . '(' parameters ')' ':' scope

    '['  shift, and go to state 78
    ':'  shift, and go to state 79
    '('  shift, and go to state 80

    $default  reduce using rule 6 (declaration)


State 52

   14 statement: variable '=' . expression

    IDENT     shift, and go to state 30
    INTCONST  shift, and go to state 31
    TFALSE    shift, and go to state 32
    TTRUE     shift, and go to state 33
    '!'       shift, and go to state 34
    '-'       shift, and go to state 35
    '('       shift, and go to state 36

    variable    go to state 37
    expression  go to state 81


State 53

   37 variable: IDENT '[' expression . ']'
   44 expression: expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   51           | expression . '&' expression
   52           | expression . '|' expression
   53           | expression . '=' expression
   54           | expression . '#' expression
   55           | expression . '<' expression
   56           | expression . '<' '=' expression
   57           | expression . '>' expression
   58           | expression . '>' '=' expression

    '|'  shift, and go to state 63
    '&'  shift, and go to state 64
    '='  shift, and go to state 65
    '#'  shift, and go to state 66
    '<'  shift, and go to state 67
    '>'  shift, and go to state 68
    '+'  shift, and go to state 69
    '-'  shift, and go to state 70
    '*'  shift, and go to state 71
    '/'  shift, and go to state 72
    ']'  shift, and go to state 82


State 54

   25 statement: IDENT '(' arguments . ')'
   38 arguments: arguments . ',' expression

    ')'  shift, and go to state 83
    ','  shift, and go to state 84


State 55

   39 arguments: expression .
   44 expression: expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   51           | expression . '&' expression
   52           | expression . '|' expression
   53           | expression . '=' expression
   54           | expression . '#' expression
   55           | expression . '<' expression
   56           | expression . '<' '=' expression
   57           | expression . '>' expression
   58           | expression . '>' '=' expression

    '|'  shift, and go to state 63
    '&'  shift, and go to state 64
    '='  shift, and go to state 65
    '#'  shift, and go to state 66
    '<'  shift, and go to state 67
    '>'  shift, and go to state 68
    '+'  shift, and go to state 69
    '-'  shift, and go to state 70
    '*'  shift, and go to state 71
    '/'  shift, and go to state 72

    $default  reduce using rule 39 (arguments)


State 56

   18 statement: DO statement_list UNTIL . expression

    IDENT     shift, and go to state 30
    INTCONST  shift, and go to state 31
    TFALSE    shift, and go to state 32
    TTRUE     shift, and go to state 33
    '!'       shift, and go to state 34
    '-'       shift, and go to state 35
    '('       shift, and go to state 36

    variable    go to state 37
    expression  go to state 85


State 57

   32 input: input ',' . variable

    IDENT  shift, and go to state 27

    variable  go to state 86


State 58

   62 expression: IDENT '(' . arguments ')'

    IDENT     shift, and go to state 30
    INTCONST  shift, and go to state 31
    TFALSE    shift, and go to state 32
    TTRUE     shift, and go to state 33
    '!'       shift, and go to state 34
    '-'       shift, and go to state 35
    '('       shift, and go to state 36

    variable    go to state 37
    arguments   go to state 87
    expression  go to state 55


State 59

   44 expression: expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   50           | '!' expression .
   51           | expression . '&' expression
   52           | expression . '|' expression
   53           | expression . '=' expression
   54           | expression . '#' expression
   55           | expression . '<' expression
   56           | expression . '<' '=' expression
   57           | expression . '>' expression
   58           | expression . '>' '=' expression

    '='  shift, and go to state 65
    '#'  shift, and go to state 66
    '<'  shift, and go to state 67
    '>'  shift, and go to state 68
    '+'  shift, and go to state 69
    '-'  shift, and go to state 70
    '*'  shift, and go to state 71
    '/'  shift, and go to state 72

    $default  reduce using rule 50 (expression)


State 60

   43 expression: '-' expression .
   44           | expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   51           | expression . '&' expression
   52           | expression . '|' expression
   53           | expression . '=' expression
   54           | expression . '#' expression
   55           | expression . '<' expression
   56           | expression . '<' '=' expression
   57           | expression . '>' expression
   58           | expression . '>' '=' expression

    $default  reduce using rule 43 (expression)


State 61

   44 expression: expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   51           | expression . '&' expression
   52           | expression . '|' expression
   53           | expression . '=' expression
   54           | expression . '#' expression
   55           | expression . '<' expression
   56           | expression . '<' '=' expression
   57           | expression . '>' expression
   58           | expression . '>' '=' expression
   59           | '(' expression . ')'
   60           | '(' expression . '?' expression ':' expression ')'

    '|'  shift, and go to state 63
    '&'  shift, and go to state 64
    '='  shift, and go to state 65
    '#'  shift, and go to state 66
    '<'  shift, and go to state 67
    '>'  shift, and go to state 68
    '+'  shift, and go to state 69
    '-'  shift, and go to state 70
    '*'  shift, and go to state 71
    '/'  shift, and go to state 72
    ')'  shift, and go to state 88
    '?'  shift, and go to state 89


State 62

   15 statement: IF expression THEN . statement_list FI
   16          | IF expression THEN . statement_list ELSE statement_list FI

    IDENT   shift, and go to state 4
    DO      shift, and go to state 6
    EXIT    shift, and go to state 7
    GET     shift, and go to state 8
    IF      shift, and go to state 9
    PUT     shift, and go to state 12
    RESULT  shift, and go to state 13
    RETURN  shift, and go to state 14
    WHILE   shift, and go to state 15
    '{'     shift, and go to state 1

    scope           go to state 16
    statement_list  go to state 90
    statement       go to state 20
    variable        go to state 22


State 63

   52 expression: expression '|' . expression

    IDENT     shift, and go to state 30
    INTCONST  shift, and go to state 31
    TFALSE    shift, and go to state 32
    TTRUE     shift, and go to state 33
    '!'       shift, and go to state 34
    '-'       shift, and go to state 35
    '('       shift, and go to state 36

    variable    go to state 37
    expression  go to state 91


State 64

   51 expression: expression '&' . expression

    IDENT     shift, and go to state 30
    INTCONST  shift, and go to state 31
    TFALSE    shift, and go to state 32
    TTRUE     shift, and go to state 33
    '!'       shift, and go to state 34
    '-'       shift, and go to state 35
    '('       shift, and go to state 36

    variable    go to state 37
    expression  go to state 92


State 65

   53 expression: expression '=' . expression

    IDENT     shift, and go to state 30
    INTCONST  shift, and go to state 31
    TFALSE    shift, and go to state 32
    TTRUE     shift, and go to state 33
    '!'       shift, and go to state 34
    '-'       shift, and go to state 35
    '('       shift, and go to state 36

    variable    go to state 37
    expression  go to state 93


State 66

   54 expression: expression '#' . expression

    IDENT     shift, and go to state 30
    INTCONST  shift, and go to state 31
    TFALSE    shift, and go to state 32
    TTRUE     shift, and go to state 33
    '!'       shift, and go to state 34
    '-'       shift, and go to state 35
    '('       shift, and go to state 36

    variable    go to state 37
    expression  go to state 94


State 67

   55 expression: expression '<' . expression
   56           | expression '<' . '=' expression

    IDENT     shift, and go to state 30
    INTCONST  shift, and go to state 31
    TFALSE    shift, and go to state 32
    TTRUE     shift, and go to state 33
    '!'       shift, and go to state 34
    '='       shift, and go to state 95
    '-'       shift, and go to state 35
    '('       shift, and go to state 36

    variable    go to state 37
    expression  go to state 96


State 68

   57 expression: expression '>' . expression
   58           | expression '>' . '=' expression

    IDENT     shift, and go to state 30
    INTCONST  shift, and go to state 31
    TFALSE    shift, and go to state 32
    TTRUE     shift, and go to state 33
    '!'       shift, and go to state 34
    '='       shift, and go to state 97
    '-'       shift, and go to state 35
    '('       shift, and go to state 36

    variable    go to state 37
    expression  go to state 98


State 69

   44 expression: expression '+' . expression

    IDENT     shift, and go to state 30
    INTCONST  shift, and go to state 31
    TFALSE    shift, and go to state 32
    TTRUE     shift, and go to state 33
    '!'       shift, and go to state 34
    '-'       shift, and go to state 35
    '('       shift, and go to state 36

    variable    go to state 37
    expression  go to state 99


State 70

   45 expression: expression '-' . expression

    IDENT     shift, and go to state 30
    INTCONST  shift, and go to state 31
    TFALSE    shift, and go to state 32
    TTRUE     shift, and go to state 33
    '!'       shift, and go to state 34
    '-'       shift, and go to state 35
    '('       shift, and go to state 36

    variable    go to state 37
    expression  go to state 100


State 71

   46 expression: expression '*' . expression

    IDENT     shift, and go to state 30
    INTCONST  shift, and go to state 31
    TFALSE    shift, and go to state 32
    TTRUE     shift, and go to state 33
    '!'       shift, and go to state 34
    '-'       shift, and go to state 35
    '('       shift, and go to state 36

    variable    go to state 37
    expression  go to state 101


State 72

   47 expression: expression '/' . expression

    IDENT     shift, and go to state 30
    INTCONST  shift, and go to state 31
    TFALSE    shift, and go to state 32
    TTRUE     shift, and go to state 33
    '!'       shift, and go to state 34
    '-'       shift, and go to state 35
    '('       shift, and go to state 36

    variable    go to state 37
    expression  go to state 102


State 73

   10 declaration: PROC IDENT ':' . scope

    '{'  shift, and go to state 1

    scope  go to state 103


State 74

   11 declaration: PROC IDENT '(' . parameters ')' ':' scope

    BOOL  shift, and go to state 5
    INT   shift, and go to state 10

    type        go to state 104
    parameters  go to state 105


State 75

   27 output_list: output_list ',' . output

    IDENT      shift, and go to state 30
    INTCONST   shift, and go to state 31
    TEXTCONST  shift, and go to state 40
    SKIP       shift, and go to state 41
    TFALSE     shift, and go to state 32
    TTRUE      shift, and go to state 33
    '!'        shift, and go to state 34
    '-'        shift, and go to state 35
    '('        shift, and go to state 36

    output      go to state 106
    variable    go to state 37
    expression  go to state 44


State 76

   17 statement: WHILE expression DO . statement_list OD

    IDENT   shift, and go to state 4
    DO      shift, and go to state 6
    EXIT    shift, and go to state 7
    GET     shift, and go to state 8
    IF      shift, and go to state 9
    PUT     shift, and go to state 12
    RESULT  shift, and go to state 13
    RETURN  shift, and go to state 14
    WHILE   shift, and go to state 15
    '{'     shift, and go to state 1

    scope           go to state 16
    statement_list  go to state 107
    statement       go to state 20
    variable        go to state 22


State 77

    2 scope: '{' declaration_list statement_list '}' .

    $default  reduce using rule 2 (scope)


State 78

    7 declaration: type IDENT '[' . INTCONST ']'

    INTCONST  shift, and go to state 108


State 79

    8 declaration: type IDENT ':' . scope

    '{'  shift, and go to state 1

    scope  go to state 109


State 80

    9 declaration: type IDENT '(' . parameters ')' ':' scope

    BOOL  shift, and go to state 5
    INT   shift, and go to state 10

    type        go to state 104
    parameters  go to state 110


State 81

   14 statement: variable '=' expression .
   44 expression: expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   51           | expression . '&' expression
   52           | expression . '|' expression
   53           | expression . '=' expression
   54           | expression . '#' expression
   55           | expression . '<' expression
   56           | expression . '<' '=' expression
   57           | expression . '>' expression
   58           | expression . '>' '=' expression

    '|'  shift, and go to state 63
    '&'  shift, and go to state 64
    '='  shift, and go to state 65
    '#'  shift, and go to state 66
    '<'  shift, and go to state 67
    '>'  shift, and go to state 68
    '+'  shift, and go to state 69
    '-'  shift, and go to state 70
    '*'  shift, and go to state 71
    '/'  shift, and go to state 72
